# Reinforcement-Learning-for-Continuous-Control-Problems

./: .gitignore  0627.py  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
configs/: default.yaml  sac.yaml
demo/: app.py
notebooks/: demo.ipynb
scripts/: train_simple.py
src/: __init__.py
src/algorithms/: __init__.py  ddpg.py  sac.py
src/eval/: __init__.py  eval.py
src/train/: __init__.py  train.py
src/utils/: __init__.py  utils.py
tests/: test_ddpg.py  test_sac.py
